# docs/openapi.yaml
@@ -165,7 +165,6 @@ paths:
           '409':
             $ref: '#/components/responses/duplicateTitle'
 
-
     /books/{id}:
       get:
         tags:
@@ -185,7 +184,107 @@ paths:
             $ref: '#/components/responses/NotFound'
           '400':
             $ref: '#/components/responses/InvalidId'
+      put:
+        security:
+            - bearerAuth: []
+        tags:
+          - Books
+        summary: Update a book by ID
+        description: Update a book by its ID, admin only.
+        parameters:
+          - $ref: '#/components/parameters/ResourceId'
+        requestBody:
+          description: Fields to update the post. At least one of "title", "stock", or "price" must be provided.
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BookUpdate'
+        responses:
+          '200':
+            description: Book updated successfully
+            content: 
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Book'
+          '401':
+            $ref: '#/components/responses/Unauthenticated'
+          '400':
+            description: Bad request due to invalid book data
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties: 
+                    errors:
+                      type: array
+                      items: 
+                        type: string
+                  example:
+                    errors:
+                      - Title must be at least 3 characters
+                      - Stock must be a postive integer
+                      - Price must be greater than 0
+          '403':
+            $ref: '#/components/responses/Unauthorized'
+          '409':
+            $ref: '#/components/responses/duplicateTitle'
+      delete:
+        security:
+            - bearerAuth: []
+        tags:
+          - Posts
+        summary: Delete a book by ID
+        description: Delete a single book by its ID, admin only.
+        parameters:
+          - $ref: '#/components/parameters/ResourceId'
+        responses:
+          '204':
+            description: Post deleted successfully
+          '400':
+            $ref: '#/components/responses/InvalidId'
+          '401':
+            $ref: '#/components/responses/Unauthenticated'
+          '403':
+            $ref: '#/components/responses/Unauthorized'
+          '404':
+            $ref: '#/components/responses/NotFound'
     
+    /orders:
+      get:
+          tags:
+            - Orders
+          summary: Gets all orders
+          description: Retrieves the bookstore's book catalog
+          parameters:
+            - $ref: '#/components/parameters/SearchBooks'
+            - name: category
+              in: query
+              required: false
+              description: Filter books containing this category
+              schema:
+                type: string
+                example: fantasy
+            - name: author
+              in: query
+              required: false
+              description: Filter books containing this author
+              schema:
+                type: string
+                example: Rowling
+            - $ref: '#/components/parameters/SortBooks'
+            - $ref: '#/components/parameters/OrderBooks'
+            - $ref: '#/components/parameters/OffsetBooks'
+            - $ref: '#/components/parameters/LimitBooks'
+          responses:
+            '200': 
+              description: A list of books
+              content: 
+                application/json:
+                  schema: 
+                    type: array
+                    items: 
+                      $ref: '#/components/schemas/Book'
 
 
 components:
@@ -263,7 +362,21 @@ components:
         categoryIds:
           type: array
           example: [1, 2]
-
+    BookUpdate:
+      type: object
+      properties: 
+        title:
+          type: string
+          #readOnly: true
+          example: 'The Hunger Games: Catching Fire'
+        price:
+          type: integer
+          example: 18.50
+        stock:
+          type: integer
+          #readOnly: true
+          example: 5
+      
     AuthCredentials:
       type: object
       properties:
